versions/0.8.2/_sources/refs/_aws-cdk_aws-inspector.rst.txt
.. @jsii-pacmak:meta@ {"fingerprint":"+nq9QTnnDtGpHaXAKBDRB1Kg3k0A+uMbpX+mgzDx62c="}

@aws-cdk/aws-inspector
======================

.. tabs::

   .. group-tab:: Java

      View in `Maven Central <https://repo1.maven.org/maven2/software/amazon/awscdk/inspector/0.8.2/>`_

      **Apache Buildr**:

      .. code-block:: none

         'software.amazon.awscdk:inspector:jar:0.8.2'

      **Apache Ivy**:

      .. code-block:: xml

         <dependency groupId="software.amazon.awscdk" name="inspector" rev="0.8.2"/>

      **Apache Maven**:

      .. code-block:: xml

         <dependency>
           <groupId>software.amazon.awscdk</groupId>
           <artifactId>inspector</artifactId>
           <version>0.8.2</version>
         </dependency>

      **Gradle / Grails**:

      .. code-block:: none

         compile 'software.amazon.awscdk:inspector:0.8.2'

      **Groovy Grape**:

      .. code-block:: none

         @Grapes(
         @Grab(group='software.amazon.awscdk', module='inspector', version='0.8.2')
         )


   .. group-tab:: JavaScript

      View in `NPM <https://www.npmjs.com/package/@aws-cdk/aws-inspector/v/0.8.2>`_

      **npm**:

      .. code-block:: console

         $ npm i @aws-cdk/aws-inspector@0.8.2

      **package.json**:

      .. code-block:: js

         {
           "@aws-cdk/aws-inspector": "^0.8.2"
         }

      **yarn**:

      .. code-block:: console

         $ yarn add @aws-cdk/aws-inspector@0.8.2


   .. group-tab:: TypeScript

      View in `NPM <https://www.npmjs.com/package/@aws-cdk/aws-inspector/v/0.8.2>`_

      **npm**:

      .. code-block:: console

         $ npm i @aws-cdk/aws-inspector@0.8.2

      **package.json**:

      .. code-block:: js

         {
           "@aws-cdk/aws-inspector": "^0.8.2"
         }

      **yarn**:

      .. code-block:: console

         $ yarn add @aws-cdk/aws-inspector@0.8.2



.. mdinclude:: ./__aws-cdk_aws-inspector.README.md

Reference
---------

.. py:module:: @aws-cdk/aws-inspector

AssessmentTargetArn
^^^^^^^^^^^^^^^^^^^

.. py:class:: AssessmentTargetArn([valueOrFunction, [displayName]])

   **Language-specific names:**

   .. tabs::

      .. code-tab:: java

         import software.amazon.awscdk.services.inspector.AssessmentTargetArn;

      .. code-tab:: javascript

         const { AssessmentTargetArn } = require('@aws-cdk/aws-inspector');

      .. code-tab:: typescript

         import { AssessmentTargetArn } from '@aws-cdk/aws-inspector';



   :extends: :py:class:`@aws-cdk/cdk.Arn`
   :param valueOrFunction: What this token will evaluate to, literal or function.
   :type valueOrFunction: any or undefined
   :param displayName: A human-readable display hint for this Token
   :type displayName: string or undefined

AssessmentTemplateArn
^^^^^^^^^^^^^^^^^^^^^

.. py:class:: AssessmentTemplateArn([valueOrFunction, [displayName]])

   **Language-specific names:**

   .. tabs::

      .. code-tab:: java

         import software.amazon.awscdk.services.inspector.AssessmentTemplateArn;

      .. code-tab:: javascript

         const { AssessmentTemplateArn } = require('@aws-cdk/aws-inspector');

      .. code-tab:: typescript

         import { AssessmentTemplateArn } from '@aws-cdk/aws-inspector';



   :extends: :py:class:`@aws-cdk/cdk.Arn`
   :param valueOrFunction: What this token will evaluate to, literal or function.
   :type valueOrFunction: any or undefined
   :param displayName: A human-readable display hint for this Token
   :type displayName: string or undefined

ResourceGroupArn
^^^^^^^^^^^^^^^^

.. py:class:: ResourceGroupArn([valueOrFunction, [displayName]])

   **Language-specific names:**

   .. tabs::

      .. code-tab:: java

         import software.amazon.awscdk.services.inspector.ResourceGroupArn;

      .. code-tab:: javascript

         const { ResourceGroupArn } = require('@aws-cdk/aws-inspector');

      .. code-tab:: typescript

         import { ResourceGroupArn } from '@aws-cdk/aws-inspector';



   :extends: :py:class:`@aws-cdk/cdk.Arn`
   :param valueOrFunction: What this token will evaluate to, literal or function.
   :type valueOrFunction: any or undefined
   :param displayName: A human-readable display hint for this Token
   :type displayName: string or undefined


cloudformation
^^^^^^^^^^^^^^
.. py:module:: @aws-cdk/aws-inspector.cloudformation

AssessmentTargetResource
~~~~~~~~~~~~~~~~~~~~~~~~

.. py:class:: AssessmentTargetResource(parent, name, properties)

   **Language-specific names:**

   .. tabs::

      .. code-tab:: java

         import software.amazon.awscdk.services.inspector.cloudformation.AssessmentTargetResource;

      .. code-tab:: javascript

         const { cloudformation.AssessmentTargetResource } = require('@aws-cdk/aws-inspector');

      .. code-tab:: typescript

         import { cloudformation.AssessmentTargetResource } from '@aws-cdk/aws-inspector';



   :extends: :py:class:`@aws-cdk/cdk.Resource`
   :param parent: the ``cdk.Construct`` this ``AssessmentTargetResource`` is a part of
   :type parent: :py:class:`@aws-cdk/cdk.Construct`
   :param name: the name of the resource in the ``cdk.Construct`` tree
   :type name: string
   :param properties: the properties of this ``AssessmentTargetResource``
   :type properties: :py:class:`~@aws-cdk/aws-inspector.cloudformation.AssessmentTargetResourceProps`

   .. py:method:: renderProperties() -> string => any

      :rtype: any


   .. py:attribute:: resourceTypeName

      The CloudFormation resource type name for this resource class.


      :type: string *(readonly)* *(static)*


   .. py:attribute:: assessmentTargetArn

      :type: :py:class:`~@aws-cdk/aws-inspector.AssessmentTargetArn` *(readonly)*


AssessmentTargetResourceProps (interface)
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~

.. py:class:: AssessmentTargetResourceProps

   **Language-specific names:**

   .. tabs::

      .. code-tab:: java

         import software.amazon.awscdk.services.inspector.cloudformation.AssessmentTargetResourceProps;

      .. code-tab:: javascript

         // cloudformation.AssessmentTargetResourceProps is an interface

      .. code-tab:: typescript

         import { cloudformation.AssessmentTargetResourceProps } from '@aws-cdk/aws-inspector';





   .. py:attribute:: resourceGroupArn

      ``AWS::Inspector::AssessmentTarget.ResourceGroupArn``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-inspector-assessmenttarget.html#cfn-inspector-assessmenttarget-resourcegrouparn


      :type: string or :py:class:`@aws-cdk/cdk.Token`


   .. py:attribute:: assessmentTargetName

      ``AWS::Inspector::AssessmentTarget.AssessmentTargetName``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-inspector-assessmenttarget.html#cfn-inspector-assessmenttarget-assessmenttargetname


      :type: string or :py:class:`@aws-cdk/cdk.Token` or undefined


AssessmentTemplateResource
~~~~~~~~~~~~~~~~~~~~~~~~~~

.. py:class:: AssessmentTemplateResource(parent, name, properties)

   **Language-specific names:**

   .. tabs::

      .. code-tab:: java

         import software.amazon.awscdk.services.inspector.cloudformation.AssessmentTemplateResource;

      .. code-tab:: javascript

         const { cloudformation.AssessmentTemplateResource } = require('@aws-cdk/aws-inspector');

      .. code-tab:: typescript

         import { cloudformation.AssessmentTemplateResource } from '@aws-cdk/aws-inspector';



   :extends: :py:class:`@aws-cdk/cdk.Resource`
   :param parent: the ``cdk.Construct`` this ``AssessmentTemplateResource`` is a part of
   :type parent: :py:class:`@aws-cdk/cdk.Construct`
   :param name: the name of the resource in the ``cdk.Construct`` tree
   :type name: string
   :param properties: the properties of this ``AssessmentTemplateResource``
   :type properties: :py:class:`~@aws-cdk/aws-inspector.cloudformation.AssessmentTemplateResourceProps`

   .. py:method:: renderProperties() -> string => any

      :rtype: any


   .. py:attribute:: resourceTypeName

      The CloudFormation resource type name for this resource class.


      :type: string *(readonly)* *(static)*


   .. py:attribute:: assessmentTemplateArn

      :type: :py:class:`~@aws-cdk/aws-inspector.AssessmentTemplateArn` *(readonly)*


AssessmentTemplateResourceProps (interface)
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~

.. py:class:: AssessmentTemplateResourceProps

   **Language-specific names:**

   .. tabs::

      .. code-tab:: java

         import software.amazon.awscdk.services.inspector.cloudformation.AssessmentTemplateResourceProps;

      .. code-tab:: javascript

         // cloudformation.AssessmentTemplateResourceProps is an interface

      .. code-tab:: typescript

         import { cloudformation.AssessmentTemplateResourceProps } from '@aws-cdk/aws-inspector';





   .. py:attribute:: assessmentTargetArn

      ``AWS::Inspector::AssessmentTemplate.AssessmentTargetArn``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-inspector-assessmenttemplate.html#cfn-inspector-assessmenttemplate-assessmenttargetarn


      :type: string or :py:class:`@aws-cdk/cdk.Token`


   .. py:attribute:: durationInSeconds

      ``AWS::Inspector::AssessmentTemplate.DurationInSeconds``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-inspector-assessmenttemplate.html#cfn-inspector-assessmenttemplate-durationinseconds


      :type: number or :py:class:`@aws-cdk/cdk.Token`


   .. py:attribute:: rulesPackageArns

      ``AWS::Inspector::AssessmentTemplate.RulesPackageArns``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-inspector-assessmenttemplate.html#cfn-inspector-assessmenttemplate-rulespackagearns


      :type: :py:class:`@aws-cdk/cdk.Token` or string or :py:class:`@aws-cdk/cdk.Token`


   .. py:attribute:: assessmentTemplateName

      ``AWS::Inspector::AssessmentTemplate.AssessmentTemplateName``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-inspector-assessmenttemplate.html#cfn-inspector-assessmenttemplate-assessmenttemplatename


      :type: string or :py:class:`@aws-cdk/cdk.Token` or undefined


   .. py:attribute:: userAttributesForFindings

      ``AWS::Inspector::AssessmentTemplate.UserAttributesForFindings``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-inspector-assessmenttemplate.html#cfn-inspector-assessmenttemplate-userattributesforfindings


      :type: :py:class:`@aws-cdk/cdk.Token` or :py:class:`@aws-cdk/cdk.Token` or :py:class:`@aws-cdk/cdk.Tag` or undefined


ResourceGroupResource
~~~~~~~~~~~~~~~~~~~~~

.. py:class:: ResourceGroupResource(parent, name, properties)

   **Language-specific names:**

   .. tabs::

      .. code-tab:: java

         import software.amazon.awscdk.services.inspector.cloudformation.ResourceGroupResource;

      .. code-tab:: javascript

         const { cloudformation.ResourceGroupResource } = require('@aws-cdk/aws-inspector');

      .. code-tab:: typescript

         import { cloudformation.ResourceGroupResource } from '@aws-cdk/aws-inspector';



   :extends: :py:class:`@aws-cdk/cdk.Resource`
   :param parent: the ``cdk.Construct`` this ``ResourceGroupResource`` is a part of
   :type parent: :py:class:`@aws-cdk/cdk.Construct`
   :param name: the name of the resource in the ``cdk.Construct`` tree
   :type name: string
   :param properties: the properties of this ``ResourceGroupResource``
   :type properties: :py:class:`~@aws-cdk/aws-inspector.cloudformation.ResourceGroupResourceProps`

   .. py:method:: renderProperties() -> string => any

      :rtype: any


   .. py:attribute:: resourceTypeName

      The CloudFormation resource type name for this resource class.


      :type: string *(readonly)* *(static)*


   .. py:attribute:: resourceGroupArn

      :type: :py:class:`~@aws-cdk/aws-inspector.ResourceGroupArn` *(readonly)*


ResourceGroupResourceProps (interface)
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~

.. py:class:: ResourceGroupResourceProps

   **Language-specific names:**

   .. tabs::

      .. code-tab:: java

         import software.amazon.awscdk.services.inspector.cloudformation.ResourceGroupResourceProps;

      .. code-tab:: javascript

         // cloudformation.ResourceGroupResourceProps is an interface

      .. code-tab:: typescript

         import { cloudformation.ResourceGroupResourceProps } from '@aws-cdk/aws-inspector';





   .. py:attribute:: resourceGroupTags

      ``AWS::Inspector::ResourceGroup.ResourceGroupTags``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-inspector-resourcegroup.html#cfn-inspector-resourcegroup-resourcegrouptags


      :type: :py:class:`@aws-cdk/cdk.Token` or :py:class:`@aws-cdk/cdk.Token` or :py:class:`@aws-cdk/cdk.Tag`



.. py:currentmodule:: @aws-cdk/aws-inspector

